sqld: switch to buildtime-bindgen
To be on the safe side, let's always regenerate bindings from the sqlite3.h
file.

--- a/sqld/Cargo.toml
+++ b/sqld/Cargo.toml
@@ -29,6 +29,7 @@ postgres-protocol = "0.6.4"
 prost = "0.11.3"
 regex = "1.7.0"
 rusqlite = { git = "https://github.com/psarna/rusqlite", branch = "libsql-dev", default-features = false, features = [
+    "buildtime_bindgen",
     "bundled-libsql",
     "column_decltype"
 ] }
