--- a/sqld/Cargo.toml
+++ b/sqld/Cargo.toml
@@ -9,6 +9,7 @@ async-lock = "2.6.0"
 async-trait = "0.1.58"
 base64 = "0.21.0"
 bincode = "1.3.3"
+bottomless = { version = "0", path = "../bottomless", features = ["libsql_linked_statically"] }
 byteorder = "1.4.3"
 bytes = { version = "1.2.1", features = ["serde"] }
 clap = { version = "4.0.23", features = [ "derive", "env"] }
