--- a/libsql-client/Cargo.toml
+++ b/libsql-client/Cargo.toml
@@ -12,4 +12,9 @@ keywords = ["libsql", "sqld", "database", "driver", "http"]
 base64 = "0.21.0"
 num-traits = "0.2.15"
 serde_json = "1.0.91"
-worker = "0.0.12"
+worker = { version = "0.0.12", optional = true }
+anyhow = "1.0.69"
+
+[features]
+workers_backend = ["worker"]
+spin_backend = ["spin-sdk"]
