--- a/libsql-client/Cargo.toml
+++ b/libsql-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libsql-client"
-version = "0.3.7"
+version = "0.4.0"
 edition = "2021"
 license = "Apache-2.0"
 description = "HTTP-based client for libSQL and sqld"
@@ -13,8 +13,11 @@ base64 = "0.21.0"
 num-traits = "0.2.15"
 serde_json = "1.0.91"
 worker = { version = "0.0.12", optional = true }
+spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.8.0", optional = true }
 anyhow = "1.0.69"
+http = { version = "0.2", optional = true }
+bytes = { version = "1.4.0", optional = true }
 
 [features]
 workers_backend = ["worker"]
-spin_backend = ["spin-sdk"]
+spin_backend = ["spin-sdk", "http", "bytes"]
