--- a/libsql-client/Cargo.toml
+++ b/libsql-client/Cargo.toml
@@ -16,6 +16,12 @@ serde_json = "1.0.91"
 worker = { version = "0.0.12", optional = true }
 anyhow = "1.0.69"
 async-trait = "0.1.64"
+rusqlite = { version = "0.28.0", optional = true, git = "https://github.com/psarna/rusqlite", rev = "4df75df0b0f5ecea2714a8b21bf9f2a0fcfd5905", default-features = false, features = [
+    "buildtime_bindgen",
+    "bundled-libsql",
+    "column_decltype"
+] }
 
 [features]
 workers_backend = ["worker"]
+local_backend = ["rusqlite"]
