--- a/sqld/Cargo.toml
+++ b/sqld/Cargo.toml
@@ -42,7 +42,7 @@ serde = { version = "1.0.149", features = ["derive"] }
 serde_json = "1.0.91"
 smallvec = "1.10.0"
 sqld-libsql-bindings = { version = "0", path = "../sqld-libsql-bindings" }
-sqlite3-parser = { version = "0.6.0", default-features = false, features = [ "YYNOERRORRECOVERY" ] }
+sqlite3-parser = { git = "https://github.com/MarinPostma/lemon-rs.git", branch = "fix-segv", default-features = false, features = [ "YYNOERRORRECOVERY" ] }
 thiserror = "1.0.38"
 tokio = { version = "1.22.2", features = ["rt-multi-thread", "net", "io-std", "io-util", "time", "macros", "sync", "fs"] }
 tokio-stream = "0.1.11"
