--- a/sqld/Cargo.toml
+++ b/sqld/Cargo.toml
@@ -60,6 +60,7 @@ memmap = "0.7.0"
 mimalloc = "0.1.36"
 sha256 = "1.1.3"
 reqwest = { version = "0.11.16", features = ["json"] }
+hrana-proto = { path = "../hrana-proto" }
 
 [dev-dependencies]
 proptest = "1.0.0"
