--- a/sqld-libsql-bindings/Cargo.toml
+++ b/sqld-libsql-bindings/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
+bottomless = { version = "0", path = "../bottomless", features = ["libsql_linked_statically"], optional = true }
 rusqlite = { version = "0.29.0", git = "https://github.com/psarna/rusqlite", rev = "b53d623ce", default-features = false, features = [
     "buildtime_bindgen",
     "bundled-libsql-wasm-experimental",
@@ -18,3 +19,4 @@ tracing = "0.1.37"
 
 [features]
 unix-excl-vfs = []
+bottomless = ["dep:bottomless"]
