--- a/sqld/Cargo.toml
+++ b/sqld/Cargo.toml
@@ -74,4 +74,4 @@ vergen = "6"
 
 [features]
 unix-excl-vfs = ["sqld-libsql-bindings/unix-excl-vfs"]
-bottomless = ["dep:bottomless"]
+bottomless = ["dep:bottomless", "sqld-libsql-bindings/bottomless"]
