--- a/sqld-libsql-bindings/Cargo.toml
+++ b/sqld-libsql-bindings/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
-rusqlite = { workspace = true }
 tracing = "0.1.37"
 once_cell = "1.17.1"
+libsql = { workspace = true }
 
 [features]
 unix-excl-vfs = []
