--- a/sqld/Cargo.toml
+++ b/sqld/Cargo.toml
@@ -27,6 +27,7 @@ hyper = { version = "0.14.23", features = ["http2"] }
 hyper-tungstenite = "0.10"
 itertools = "0.10.5"
 jsonwebtoken = "8.2.0"
+libsql = { workspace = true }
 memmap = "0.7.0"
 mimalloc = { version = "0.1.36", default-features = false }
 nix = { version = "0.26.2", features = ["fs"] }
@@ -37,7 +38,6 @@ prost = "0.11.3"
 rand = "0.8"
 regex = "1.7.0"
 reqwest = { version = "0.11.16", features = ["json", "rustls-tls"], default-features = false }
-rusqlite = { workspace = true }
 serde = { version = "1.0.149", features = ["derive", "rc"] }
 serde_json = { version = "1.0.91", features = ["preserve_order"] }
 sha2 = "0.10"
@@ -76,4 +76,4 @@ vergen = { version = "8", features = ["build", "git", "gitcl"] }
 
 [features]
 unix-excl-vfs = ["sqld-libsql-bindings/unix-excl-vfs"]
-debug-tools = ["console-subscriber", "rusqlite/trace", "tokio/tracing"]
+debug-tools = ["console-subscriber", "tokio/tracing"]
